# ssh-hub

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: CLAUDE.md
.github/workflows/: release.yml  tag.yml
changelog/: v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.6.md  v0.8.0.md
docs/: changelog.md  server-setup.md  testing.md  troubleshooting.md
src/: cli.rs  lib.rs  main.rs  metadata.rs  server.rs  server_registry.rs
src/cli/: add.rs  connection.rs  list.rs  mcp_install.rs  mod.rs  refresh.rs  remove.rs  spinner.rs  update.rs  upgrade.rs
src/connection/: auth.rs  file_ops.rs  mod.rs  pool.rs  session.rs
src/tools/: mod.rs  sync_types.rs
src/tools/connect/: handler.rs  schema.rs
src/tools/disconnect/: handler.rs  schema.rs
src/tools/list_servers/: handler.rs  schema.rs
src/tools/remote_bash/: handler.rs  schema.rs
src/tools/remote_edit/: handler.rs  schema.rs
src/tools/remote_glob/: handler.rs  schema.rs
src/tools/remote_read/: handler.rs  schema.rs
src/tools/remote_write/: handler.rs  schema.rs
src/tools/sync_pull/: handler.rs  schema.rs
src/tools/sync_push/: handler.rs  mod.rs  schema.rs
src/tools/sync_status/: handler.rs  schema.rs
src/utils/: checksum.rs  gitignore.rs  mod.rs  path.rs
tests/: cli.rs  mcp_install.rs  metadata.rs  remote_bash.rs  server_registry.rs  utils.rs
