[package]
name = "ssh-hub"
version = "0.7.0"
edition = "2021"
description = "MCP server for remote SSH sessions"
license = "MIT"
repository = "https://github.com/perceptron-studios/ssh-hub"

[dependencies]
# MCP SDK
rmcp = { version = "0.13", features = ["server", "transport-io"] }

# SSH
russh = "0.50"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization & schemas
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Async utilities
futures = "0.3"

# Utils
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tar = "0.4"
flate2 = "1"
dirs = "5"
colored = "3.1.1"

[lib]
name = "ssh_hub"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[[bin]]
name = "ssh-hub"
path = "src/main.rs"
